<resources>
    <string name="app_name">Semana6</string>
    <string name="botonmain1">Action Bar</string>
    <string name="botonmain2">Mmedia</string>
    <string name="botonMmedia1">Audio</string>
    <string name="botonMmedia2">Video</string>
    <string name="botonMmedia3">Animacion</string>
    <string name="botonplay">Play</string>
    <string name="botonpause">Pause</string>
    <string name="botoniniciar">Iniciar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="textoontentmain">Abre el menu hombre, que esta hecho.</string>
    <string name="buenosdias">Buenos Dias</string>
    <string name="buenasnoches">Buenas Noches</string>
    <string name="t65alax">T-65B Ala-X</string>
    <string name="alay">Ala-Y</string>
    <string name="falcon">YT-1300</string>
    <string name="alaa">Ala-A</string>
    <string name="tiefighter">Caza TIE</string>
    <string name="tieavanzado">TIE Avanzado</string>
    <string name="lammbda">Lanzadera T-4a clase Lambda</string>
    <string name="interceptor">Interceptor TIEs</string>
    <string name="botonnavigationdraver">Navigation Drawer</string>
    <string name="botonvideoyt">VIDEO DE YT</string>
    <string name="botonvideomp4">VIDEO MP4</string>
    <string name="btIO">I-O</string>
    <string name="touch">Tocame para mostrar un mensaje</string>
    <string name="numSensores">Sensores disponibles</string>
    <string name="datosSensores">Datos sensores</string>
    <string name="etiqSensorMovimiento">Acelerometro</string>
    <string name="presionAtm">Presion Atmosferica</string>
    <string name="luz">Sensor de luz</string>
    <string name="proximidad">Sensor de proximidad</string>
    <string name="temperatura">Sensor de temperatura</string>
    <string name="humedad">Sensor de humedad</string>
    <string name="aceleracion">Sensor de aceleracion lineal</string>
    <string name="step">Sensor contador de pasos</string>

</resources>
