<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_xwing"
            android:icon="@drawable/rebeldes"
            android:title="@string/t65alax" />
        <item
            android:id="@+id/nav_ywing"
            android:icon="@drawable/rebeldes"
            android:title="@string/alay" />
        <item
            android:id="@+id/nav_awing"
            android:icon="@drawable/rebeldes"
            android:title="@string/alaa" />
        <item
            android:id="@+id/nav_falcon"
            android:icon="@drawable/rebeldes"
            android:title="@string/falcon" />
    </group>

    <item android:title="Imperio Intergalactico">
        <menu>
            <item
                android:id="@+id/nav_fighter"
                android:icon="@drawable/imperio"
                android:title="@string/tiefighter" />
            <item
                android:id="@+id/nav_avanced"
                android:icon="@drawable/imperio"
                android:title="@string/tieavanzado" />
            <item
                android:id="@+id/nav_lanzadera"
                android:icon="@drawable/imperio"
                android:title="@string/lammbda" />
            <item
                android:id="@+id/nav_interceptor"
                android:icon="@drawable/imperio"
                android:title="@string/interceptor" />
        </menu>
    </item>

</menu>
